# ez.down

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
examples/: welcome.md
src/: api.ts  context-menu.ts  editor.ts  html2pdf.d.ts  icons.ts  main.ts  naming.ts  pdf.ts  preferences.ts  settings-panel.ts  sidebar.ts  statusbar.ts  styles.css  tabs.ts  updater.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs_watch.rs  lib.rs  main.rs
src/themes/: index.ts  skins.css
