[package]
name = "ezdown"
version = "1.0.0-beta.1"
description = "A lightweight, beautiful native WYSIWYG Markdown editor and reader."
authors = ["Adrian Widmer"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ezdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
